--- a/src/DrumMachine/DrumMachine.css
+++ b/src/DrumMachine/DrumMachine.css
@@ -37,4 +37,7 @@
     background-color: yellow;
     border-radius: 5px;
     margin: 20px;
+    justify-content: center;
+    font-size: 24px;
+    color: red
 }
